# CatSurf

./: BOT_TESTING.md  CMakeLists.txt  Dockerfile  Makefile  README.md  bot_simulator.sh  chunkedtest.sh  generate.c  quick_test.sh  test_bot_detection.sh  test_bot_patterns.py
config/: catsurf.conf  cgi-demo.conf  default.conf  error.conf  error2.conf  minimal.conf  test1.conf  test2.conf  virtualHost.conf
docs/: CGI.md  Config File Grammar Documentation.md  HTTP-Request-route-Response.md  parser_documentation.md
include/: botDetection.hpp  captchaBypass.hpp  cgi.hpp  configParser.hpp  httpRequest.hpp  httpResponse.hpp  location.hpp  parser.hpp  platform.hpp  poller.h  requestHandler.hpp  requesthandler.hpp  router.hpp  server.hpp  serverSocket.hpp  statusCodes.hpp  utils.hpp
poller/: CMakeLists.txt  README.md  main.cpp  poller.cpp  poller.h
src/: main.cpp
src/botDetection/: botDetection.cpp
src/captchaBypass/: captchaBypass.cpp
src/cgi/: cgiManager.cpp
src/configParser/: configParser.cpp  grammarValidation.cpp  parseGlobal.cpp  parseLocation.cpp  parseServer.cpp  parserGramVal.cpp  print.cpp  testMain.cpp
src/httpRequest/: httpRequest.cpp  testMain.cpp
src/httpResponse/: httpResponse.cpp  requesthandler.cpp
src/parser/: parseGlobalConfig.cpp  parser.cpp  parserGramVal.cpp
src/poller/: main.cpp  poller.cpp  poller.h
src/router/: router.cpp  router.hpp
src/server/: server copy.cpp  server.cpp  serverSocket.cpp
src/utils/: utils.cpp
www/: index.html  index2.html  post.html  styles.css
www/catinder/: index.html
www/catshare/: index.html
www/catshare/uploads/: 1771340562_0
www/cgi-bin/assets/: data.txt
www/cgi-bin/php/: query_params.php  upload.php
www/default/: default.html  script.js  styles.css
www/error_pages/: 400.html  403.html  404.html  405.html  413.html  500.html  501.html  502.html  504.html  505.html  error.css
www/feed/: post.html
(+7 files in other folders)
